# my-website

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  app-staging.yaml  app.yaml  cloudbuild-deploy-to-staging.yaml  cloudbuild.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg
app/: __init__.py
app/blog/: __init__.py  routes.py
app/blog/templates/: blog.html  blog_index.html
app/blog/templates/markdown/: DVC and MLflow tutorial.html  DVC and MLflow tutorial.md  blog_index.html  dvc.md
app/core/: __init__.py  routes.py
app/core/templates/: 404.html  home.html  layout.html
app/core/templates/markdown/: home_content.html  home_content.md
app/projects/: __init__.py  routes.py
app/projects/templates/: projects.html
app/projects/templates/markdown/: projects_list.html  projects_list.md
app/static/css/: styles.css
requirements/: common.txt  dev.txt  prod.txt  venv-dev-freeze.txt
tests/: conftest.py  test_core.py  test_factory.py
