[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = "My personal website"
authors = ["Isuru Gunasekara <isuru@isuru.ca>"]
license = "GNU AGPL V3"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
bandit = "^1.7.4"
safety = "^1.10.3"
pytest = "^7.1.1"
coverage = "^6.3.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
